infrastructure/kube-prometheus/ingress-grafana.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: ${infranamespaceprefix}monitoring
spec:
  gateways:
  - ${infranamespaceprefix}istio-ingress/pauwels-labs
  hosts:
  - dashboards.pauwelslabs.com
  http:
  - name: grafana
    route:
    - destination:
        host: grafana
        port:
          number: 3000
